# GYM-Assistant

./: .dockerignore  .env.example  Dockerfile  README.en.md  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  db.py  feishu.py  intent.py  llm.py  main.py  schemas.py  services.py  weather.py  workflow_config.json  workflow_config.py
scripts/: import_csv.py
tests/: test_report.py
