[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "health-checkin-feishu-bot"
version = "0.1.0"
description = "Self-hosted Feishu bot for health check-ins, scoring, calorie estimation, and weekly reports."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.1.0",
    "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["*.json"]
